--- a/presenting-tosw.adoc
+++ b/presenting-tosw.adoc
@@ -1,17 +1,17 @@
 = Presenting The Open Source Way
 Author: Karsten Wade <quaid@iquaid.org>
-Updated: 2020-10-27
+Updated: 2020-11-03
 
-An English idiom says, "There is a method to my madness.".footnote:[From "Hamlet" by William Shakespeare, Act 2 Scene 2: Polonius (aside) "Though this be madness, yet there is method in `t"]c
+An English idiom says, "There is a method to my madness.".footnote:[From "Hamlet" by William Shakespeare, Act 2 Scene 2: Polonius (aside) "Though this be madness, yet there is method in `t"]
 Most of the time, the things we do make absolutely no sense to outside observers.
-They look like sheer madness.
+Out of context, they look like sheer madness.
 But for those inside that messiness—inside that whirlwind of activity—there's a certain regularity, a certain predictability, and a certain motive.
 A method.
 
-Open source community management can seem like its own form of incomprehensible madness, especially to someone who is unfamiliar with how open source software gets made, or those who find themselves staring down the prospect of having to coordinate others to join in making it.
-
-What this guide hopes to provide is some insight into an ever-evolving methodology.
-What are your preferences for practicing the open source way?
+A method is a _way of doing something_, a particular manner or style of practice.
+The practice of open source community management can seem like its own form of incomprehensible madness, especially to someone who is unfamiliar with how open source software gets made, or those who find themselves staring down the prospect of having to coordinate others to join in making it.
+What this guide hopes to provide is some insight into an ever-evolving methodology, a form of practice.
+At its core is a simple question: What are your preferences for practicing the open source way?
 
 But beyond that, this work is really digging into the question of _why_ someone might do the work this way.
 Why use this or that method to organize the madness?
@@ -25,16 +25,18 @@ In particular, this guide is a living document that endeavors to gather and spre
 
 These voices are all part of https://theopensourcway.org[this community of practice around open source software community management].
 
-== The shape of things, i.e., assumptions we are making
+== The shape of things (i.e., assumptions we are making)
 
-When you look at the table of contents for this guide, notice how the flow of focus goes from the user, to the participant, to the contributor.
+When you look at this guide's table of contents, notice the organizational flow: from user to participant to contributor.
+This arrangement specifically tracks our view of how a community comes about and grows.
+And it all starts with a need.
+If you've worked in open source projects and communities, you've likely seen the cycle many times.
+It goes something like this:
 
-This arrangement specifically tracks our view of how a community comes about and grows. And it all starts with a need.
-
-. A person or persons needing a solution creates the first iteration of the software.
-. Other people with similar needs start using it, forming the core of the userbase.
-. From the userbase arise people who are enthusiasts of the software and things about/around it.
-. Eventually arising from the users and the enthusiasts come people who are interested and have grown capable of contributing to the software in some way.
+. A person or group addressing a problem creates the first iteration of software that offers one solution to that problem.
+. Other people with similar needs start using it, forming the core of a userbase.
+. From the userbase arise enthusiasts, people who promote the software and the community emerging around it (that is, the values and principles that project seems to espouse).
+. Eventually arising from the users and the enthusiasts come people who are interested in (and have grown capable of) contributing to the software in some way; they ensure the project remains active and responds to the changing nature of the problem for which it was originally developed.
 
 Thus, the primary and continual focus for a project is to _take good care of your users_, for some of them will become your contributors, and you want them to do it out of love more than resentment.
 
@@ -55,7 +57,7 @@ Focus on your end-users and lower the barriers to participation all around.
 
 Contributors arise from participants, who all started as users.
 
-Make your software wildly successful by having a user-centric initiative, while making the community open and welcoming those users come looking to see what is going on the creation/contribution side 
+Make your software wildly successful by having a user-centric initiative, while making the community open and welcoming those users curious enough to investigate how the software gets created.
 ____
 
 The pathway of this guidebook therefore is:
@@ -65,13 +67,13 @@ The pathway of this guidebook therefore is:
 3. *Grow contributors* from this rich, fertile user and enthusiast base, by making sure when any of those folks look into how the software is made, they see themselves represented and can imagine how they could fit in, too.
 Make sure when they get to the contributor party, the barriers are clearly lowered and welcoming.
 
-It's one thing to let people know about your great dance party.
+Think of it this way: It's one thing to let people know about your great dance party.
 It's another thing to empower those dancers to advocate for your way of throwing a dance party.
 It's a very great thing to make the dance party able to evolve to welcome all manner of music and dance from the world around us.
 
 To get the dancers who see your poster and show up is the first step to stick around, and it helps if they can see right away that this is a place for them and theirs, too.
 
-In considering this pathway, you can see there is no emphasis on expertise or even existing skills relevant to the project more than curiosity and willingness to try the software, to care about the software, and to help create the software.
+You can see this pathway to project success doesn't necessarily emphasize expertise (or even existing skills relevant to the project) more than curiosity and willingness to try the software, to care about the software, and to help create the software.
 This does not mean that people don't bring skills to the project; they do, many of them right from first point of contact with the project.
 But it is easier to teach skills than to teach someone to truly care about your project.
 
@@ -85,9 +87,9 @@ Aside from stories that naturally arise in the body of the chapter, there are ot
 
 Each section of this guide consists of one or more chapters.
  
-A chapter is a discrete discussion of a topic or a closely-related set of topics.
+A chapter represents discussion of a discrete topic or closely-related set of topics.
 // Those topics are discussed in terms of a principle (what), implementation of that principle (how), and examples of why that principle is followed or recommended.
-//This principle/implementation/example, or PIE, approach helps makes chapters consistent for reading.
+// This principle/implementation/example, or PIE, approach helps makes chapters consistent for reading.
 
 The idea is that you can open and read a chapter as a stand-alone experience without needing to read the rest of the guide to understand and act from the material in that chapter.
 // Having the PIE consideration helps as reader find themselves in the guide at any point.
